# GenAI-PoD

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  Makefile  README.md  patch.diff  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md  self-review.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: _build.yaml  _build_doc.yaml  _pre_commit.yaml  _pypi_publish.yaml  _pypi_test_publish.yaml  _test.yaml  cicd.yaml  dependabot_automerge.yaml
doc/: aarch64_usage.rst  command_line_interface.rst  conf.py  index.rst  installation.rst  introduction.rst  license.rst  requirements.txt  setting_tor_binary.rst  web_shop_usage.rst
genai/: cli.py  utils.py
genai/generators/: generate_gpt.py
genai/resources/: forbidden_words.json  scaling_adjustments.json
genai/uploaders/: redbubble.py  spreadshirt.py
genai/utilitys/: bg_remove.py  bigjpg_upscaler.py  verify_sites.py
genai_pod/: __init__.py  aarch64_README.md  cli.py  utils.py
genai_pod/generators/: generate_gpt.py
genai_pod/resources/: vexel_forbidden_words.json
genai_pod/uploaders/: redbubble.py  spreadshirt.py
genai_pod/utilitys/: bg_remove.py  bigjpg_upscaler.py  verify_sites.py
tests/: conftest.py  test_cli.py
