# -*- coding: utf-8 -*-
# Copyright (C) 2024
#   Benjamin Thomas Schwertfeger https://github.com/btschwertfeger
#   Leonhard Thomas Schwertfeger https://github.com/LeonhardSchwertfeger
#

[build-system]
requires = ["setuptools>=65.5.1", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-pod"
keywords = [
    "Spreadshirt",
    "Redbubble",
    "Automation",
    "Upload tool",
    "ChatGPT",
    "Selenium",
    "ShirtBusiness",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]

dynamic = ["version"]
authors = [
    { name = "Leonhard Thomas Schwertfeger", email = "schwertfegerleonhard@gmail.com" },
    { name = "Benjamin Thomas Schwertfeger", email = "contact@b-schwertfeger.de" },
]
description = "CLI tool to generate and upload images to print on demand web shops."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "click",
    "cloup",
    "selenium",
    "webdriver-manager",
    "pytz",
    "undetected-chromedriver==3.5.5",
    "seleniumbase",
    "requests",
    "tqdm",
    "numpy",
]

[project.scripts]
genai = "genai_pod.cli:cli"

[project.urls]
"Homepage" = "https://github.com/LeonhardSchwertfeger/genai-pod"
"Bug Tracker" = "https://github.com/LeonhardSchwertfeger/genai-pod/issues"

[project.optional-dependencies]
dev = [
    # building
    "build",
    # Linting
    "ruff",
    "pylint",
    # Typing
    "mypy",
    "types-click",
    # dev
    "ipykernel", # python3 -m ipykernel install --user --name=genai_pod
    # documentation
    "sphinx==7.4.7", # Sphinx must have 7.4.7 and nbsphinx 0.8.12 due to compatibility issues between nbsphinx and Sphinx versions ≥8.
    "sphinx-click",
    "sphinx-rtd-theme",
    "nbsphinx==0.9.7",
    "ipython",
]
test = ["pytest", "pytest-cov"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["genai_pod*"]

[tool.setuptools.package-data]
genai = ["resources/*.json"]

[tool.setuptools_scm]
write_to = "genai_pod/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# ========= T E S T I N G ======================================================
#
[tool.pytest]
junit_family = "xunit2"
testpaths = ["tests"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
markers = ["wip: Used to run a specific test by hand."]

[tool.coverage.run]
source = ["genai_pod"]
omit = ["*tests*"]

[tool.coverage.report]
exclude_lines = ["coverage: disable", "if TYPE_CHECKING:"]
skip_empty = true

# ========= L I N T I N G ======================================================
#
[tool.ruff]

lint.select = ["A", "B", "C4", "E", "F", "I", "N", "RET", "S", "SIM", "TID"]

respect-gitignore = true
exclude = ["scripts/*.py", "genai_pod/impulse/*"]

line-length = 100
cache-dir = ".cache/ruff"

lint.ignore = [
    "PLR2004", # Magic value in comparison
    "S404", # possibly insecure
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501", "F841", "N802", "S101", "S106", "S110", "TID252", "S404"]


[tool.mypy]
cache_dir = ".cache/mypy"
sqlite_cache = true
cache_fine_grained = true

# Untyped definitions and calls
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Suppressing errors
ignore_errors = false

# Configuring error messages
show_error_context = true
show_column_numbers = true
hide_error_codes = false
pretty = true
color_output = true
show_absolute_path = true
ignore_missing_imports = true

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
# disable_error_code = xxx,xxx
implicit_reexport = true
strict_concatenate = false
strict_equality = true
strict = true
